--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     scroll-behavior: smooth;
     font-family: "poppins";
     user-select: none;
+    box-sizing: border-box !important;
 }
 
 html {
@@ -22,13 +23,45 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 /* -----------header-------- */
-#header {
-    width: 100%;
-    height: 100vh;
+
+
+/* updated hero */
+
+.offCanvasCustom{
+    background-color: red !important;
+width: 50vw !important;
+box-sizing: border-box !important;
 }
+#onCanvasImg{
+    fill: rgb(157, 10, 10) !important;
+}
+.offCanvasLogo{
+    text-decoration: none !important;
+}
+.offCanvasLogo h1{
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+}
+.offCanvasLogo h1 span{
+    color: black;
+}
+#offCanvasList{
+    list-style: none;
+    padding: 0;
+}
+#offCanvasList li a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* updated hero */
+
+
 
 .container {
     padding: 2.25rem 10%;
@@ -85,12 +118,12 @@ nav ul li a:hover::after {
     width: 100%;
 }
 
-.containersub {
+/* .containersub {
     display: flex;
-}
+} */
 
 .header-text {
-    margin-top: 17%;
+    /* margin-top: 17%; */
 }
 
 .header-text p {
@@ -106,17 +139,13 @@ nav ul li a:hover::after {
     color: red;
 }
 
-.header-image img {
-    width: 25%;
-    bottom: 10em;
-    right: 12rem;
-    position: absolute;
-}
+
 
 /* ------------about-------------- */
 #about {
     color: #ababab;
     padding: 8rem 0;
+    padding-top: 0;
 }
 
 .badge {
@@ -218,6 +247,9 @@ nav ul li a:hover::after {
 
 .tab-links.active-link::after {
     width: 100%;
+}
+.tab-contents ul{
+    padding: 0;
 }
 
 .tab-contents ul li {
@@ -439,9 +471,9 @@ nav .fas {
 
 /* ----------------css for small screen--------- */
 @media only screen and (max-width:23.75rem) {
-    .header-text {
+    /* .header-text {
         margin-top: 35%;
-    }
+    } */
 
     .header-text p {
         font-size: 1.6rem;
@@ -452,13 +484,7 @@ nav .fas {
         font-size: 2.7rem;
     }
 
-    .header-image img {
-        width: 60%;
-        top: 40rem;
-        left: 5rem;
-        z-index: -1;
-        position: absolute;
-    }
+    
 
     nav ul {
         background-color: #ff004f;
@@ -538,9 +564,9 @@ nav .fas {
 }
 
 @media only screen and (max-width:28.125rem) and (min-width:23.75rem) {
-    .header-text {
+    /* .header-text {
         margin-top: 40%;
-    }
+    } */
 
     .header-text p {
         font-size: 1.6rem;
@@ -549,14 +575,6 @@ nav .fas {
     .header-text h1 {
         margin-top: 1.25rem;
         font-size: 3rem;
-    }
-
-    .header-image img {
-        width: 60%;
-        top: 40rem;
-        left: 4rem;
-        z-index: -1;
-        position: absolute;
     }
 
     nav ul {
@@ -637,9 +655,9 @@ nav .fas {
 }
 
 @media only screen and (max-width:37.5rem) and (min-width:28.125rem) {
-    .header-text {
+    /* .header-text {
         margin-top: 20%;
-    }
+    } */
 
     .header-text p {
         font-size: 1.6rem;
@@ -650,13 +668,7 @@ nav .fas {
         font-size: 3.5rem;
     }
 
-    .header-image img {
-        width: 50%;
-        top: 40rem;
-        left: 10rem;
-        z-index: -1;
-        position: absolute;
-    }
+   
 
     nav ul {
         background-color: #ff004f;
@@ -736,9 +748,9 @@ nav .fas {
 }
 
 @media only screen and (max-width:50rem) and (min-width:37.5rem) {
-    .header-text {
+    /* .header-text {
         margin-top: 20%;
-    }
+    } */
 
     .header-text p {
         font-size: 1.6rem;
@@ -749,13 +761,7 @@ nav .fas {
         font-size: 4.5rem;
     }
 
-    .header-image img {
-        width: 35%;
-        top: 40rem;
-        left: 15rem;
-        z-index: -1;
-        position: absolute;
-    }
+
 
     nav ul {
         background-color: #ff004f;
@@ -833,11 +839,14 @@ nav .fas {
         font-size: 1.4rem;
     }
 }
+#developerLogo{
+    max-width: 200px;
+}
 
 @media only screen and (max-width:62rem) and (min-width:50rem) {
-    .header-text {
+    /* .header-text {
         margin-top: 15%;
-    }
+    } */
 
     .header-text p {
         font-size: 1.6rem;
@@ -848,13 +857,7 @@ nav .fas {
         font-size: 4.5rem;
     }
 
-    .header-image img {
-        width: 30%;
-        top: 40rem;
-        right: 15rem;
-        z-index: -1;
-        position: absolute;
-    }
+
 
     .subtitle {
         font-size: 4rem;
@@ -901,238 +904,11 @@ nav .fas {
 }
 .hiddenEmoji {
     visibility: hidden;
-    margin-left: -70px;
+    /* margin-left: -70px; */
 }
 
-@media screen and (min-width:273px) and (max-width:300px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 350vh;
-    }
-    .header-image img {
-        position: absolute;
-        right: 10rem;
-        top: 35rem;
-        z-index: -1;
-        /* width: 17%; */
-    }
-    .header-text p {
-        font-size: 1rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 2rem !important;
-    }
-}
-@media screen and (min-width:300px) and (max-width:400px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 280vh;
-    }
-    .header-image img {
-        position: absolute;
-        right: 10rem;
-        top: 30rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 1rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 2rem !important;
-    }
-}
-@media screen and (min-width:400px) and (max-width:500px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 220vh;
-    }
-    .header-image img {
-        position: absolute;
-        right: 10rem;
-        top: 30rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 1rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 2rem !important;
-    }
-}
-@media screen and (min-width:500px) and (max-width:600px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 200vh;
-    }
-    .header-image img {
-        position: absolute;
-        right: 10rem;
-        top: 30rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 2rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 3rem !important;
-    }
-}
-@media screen and (min-width:600px) and (max-width:700px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 130vh;
-    }
-    .header-text{
-        margin-top: 1rem;
-    }
-    .header-image img {
-        position: absolute;
-        right: 1rem;
-        top: 22rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 2rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 3rem !important;
-    }
-}
-
-@media screen and (min-width:700px) and (max-width:800px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-        height: 130vh;
-    }
-    .header-text{
-        margin-top: 1rem;
-    }
-    .header-image img {
-        position: absolute;
-        right: 1rem;
-        top: 22rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 2rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 3rem !important;
-    }
-}
-@media screen and (min-width:900px) and (max-width:1000px){
-    .hiddenEmoji{
-        margin-left: -20px;
-    }
-    #header{
-        position: relative;
-    }
-
-    .header-image img {
-        position: absolute;
-        right: 5rem;
-        top: 10rem;
-        z-index: -1;
-    }
-    .header-text p {
-        font-size: 2rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 3rem !important;
-    }
-}
-
-@media screen and (min-width:1400px){
-    #header{
-        position: relative;
-    }
-    .header-image img {
-        position: absolute;
-        top: 30rem;
-        z-index: -1;
-    }
-}
-@media screen and (min-width:1800px){
-    #header{
-        height: 80vh;
-        position: relative;
-    }
-    .header-image img {
-        position: absolute;
-        top: 30rem;
-        z-index: -1;
-    }
-}
-
-@media screen and (min-width:2500px){
-    #header{
-    height: 60vh;
-    }
-    .header-image img {
-        right:10rem;
-        z-index: -1;
-        width:30%;
-    }
-    .header-text p {
-        font-size: 4rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 7rem;
-    }
-}
-
-@media screen and (min-width:3000px){
-    #header{
-        position: relative;
-        height: 60vh;
-    }
-    .header-image img {
-        right:50rem;
-        position: absolute;
-        z-index: -1;
-        top: 65rem;
-        width: 35%;
-    }
-    .header-text p {
-        font-size: 7rem;
-    }
-    
-    .header-text h1 {
-        margin-top: 1.25rem;
-        font-size: 9rem;
+@media screen and (min-width:1300px) {
+    .heroContainer{
+        height: 100vh;
     }
 }
