--- a/style.css
+++ b/style.css
@@ -19,16 +19,20 @@ html {
 body {
     background: #080808;
     color: #fff;
-    max-width: 1300px;
+    /* max-width: 1300px; */
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     overflow-x: hidden;
+    position: relative;
 }
 
 /* -----------header-------- */
 
-
+.nav_link_header_section{
+    position: relative;
+    z-index: 14;
+}
 /* updated hero */
 
 .offCanvasCustom{
@@ -224,6 +228,8 @@ nav ul li a:hover::after {
 .tab-titles {
     display: flex;
     margin: 1.25rem 0rem 2.5rem;
+    position: relative;
+    z-index: 14;
 }
 
 .tab-links {
@@ -290,6 +296,7 @@ nav ul li a:hover::after {
     font-weight: 300;
     border-radius: .625rem;
     transition: background .5s, transform .5s;
+    z-index: 12;
 }
 
 .services-list div i {
@@ -341,12 +348,13 @@ nav ul li a:hover::after {
     transition: transform .5s;
     min-height: 400px;
     max-height: 400px;
+    opacity: .7;
 }
 
 .layer {
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, .6), #ff004f);
+    background: linear-gradient(rgba(0, 0, 0, .6), #2b2a2a);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -484,7 +492,7 @@ nav .fas {
         font-size: 2.7rem;
     }
 
-    
+   
 
     nav ul {
         background-color: #ff004f;
@@ -924,3 +932,49 @@ nav .fas {
          justify-content:space-between
     }
 }
+
+
+
+/* head */
+
+
+.particles_container{
+    position: relative;
+    width: 100%;
+    /* min-height: 100dvh; */
+    background-color:black;
+  }
+  
+  #particle_canvas {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    z-index: 11;
+  }
+
+
+/*  */
+
+/* footer */
+
+
+.webgl {
+    position: absolute;
+    top: 0;
+    left: 0;
+    outline: none;
+    z-index: -1;
+    height: 100% !important;
+    width: 100% !important;
+  }
+
+  #contact{
+    overflow: hidden;
+    position: relative;
+  }
+  
+ 
+  
+/* footer */
