--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ nav ul li a:hover::after {
 .layer {
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, .6), #2b2a2a);
+    background: linear-gradient(rgba(0, 0, 0, .1), #2b2a2a);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -367,6 +367,7 @@ nav ul li a:hover::after {
     flex-direction: column;
     font-size: 1.503rem;
     transition: .5s;
+    height: 100%;
 }
 
 .layer a {
@@ -388,7 +389,7 @@ nav ul li a:hover::after {
 }
 
 .work:hover img {
-    transform: scale(1.3);
+    transform: scale(1.2);
 
 }
 
